--- a/seiten/Leistungen.html
+++ b/seiten/Leistungen.html
@@ -122,6 +122,12 @@
             <p>&bull; Klassische Wellnessmassagen<br><br></p>
 
             <p>&bull; Aromaölmassagen für tiefe Entspannung<br><br><br></p>
+            <p>&bull; Fuhlendorf Behandlung</p>
+
+            <a href="https://www.fuhlendorf-beauty.de/" target="_blank">
+                Mehr über die Fuhlendorf-Behandlung!
+            </a><br>
+
 
 
 
