--- a/seiten/Leistungen.html
+++ b/seiten/Leistungen.html
@@ -131,7 +131,7 @@
 
 
 
-            <span class="Gutscheine">Alle Angebote sind auch
+            <br><br> <span class="Gutscheine">Alle Angebote sind auch
                 als Gutschein erhältlich!!<br></span>
 
 
