--- a/seiten/Leistungen.html
+++ b/seiten/Leistungen.html
@@ -2,7 +2,7 @@
 <html lang="de">
     <head>
         <meta charset="UTF-8">
-        <title>My Page!</title>
+        <title>Therapie-Zentrum Sabine A. Burmann</title>title>
         <link rel="stylesheet" href="../styles/styles.css">
     </head>
 
