--- a/seiten/Über mich.html
+++ b/seiten/Über mich.html
@@ -2,7 +2,7 @@
 <html lang="de" xmlns:C="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="UTF-8">
-        <title>My Page!</title>
+        <title>Therapie-Zentrum Sabine A. Burmann</title>
         <link rel="stylesheet" href="../styles/styles.css">
     </head>
 
