--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My Page!</title>
+        <title>Therapie-Zentrum Sabine A. Burmann</title>
         <link rel="stylesheet" href="styles/styles.css">
     </head>
 
