--- a/seiten/Leistungen.html
+++ b/seiten/Leistungen.html
@@ -124,7 +124,7 @@
             <p>&bull; Aromaölmassagen für tiefe Entspannung<br><br><br></p>
             <p>&bull; Fuhlendorf Behandlung</p>
 
-            <a href="https://www.fuhlendorf-beauty.de/" target="_blank">
+            <a href="" target="_blank">
                 Mehr über die Fuhlendorf-Behandlung!
             </a><br>
 
