--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                <li><a href="seiten/Kontakt.html">Kontakt</a></li>
                <li><a href="seiten/Leistungen.html">Leistungen</a></li>
                <li><a href="seiten/Über%20mich.html">Über mich</a></li>
+               <li><a href="seiten/Fuhlendorf.html">Fuhlendorf</a></li>
                
            </ul>
        </nav>
