--- a/seiten/Leistungen.html
+++ b/seiten/Leistungen.html
@@ -124,8 +124,8 @@
 
             <p>&bull; Aromaölmassagen für tiefe Entspannung<br><br><br></p>
             <p>&bull; Fuhlendorf Behandlung</p>
-
-            <a  target="_blank">
+            
+            </a  href="../seiten/fuhlendorf.html">
                 Mehr über die Fuhlendorf-Behandlung!
             </a><br>
 
