--- a/seiten/Leistungen.html
+++ b/seiten/Leistungen.html
@@ -125,7 +125,7 @@
             <p>&bull; Aromaölmassagen für tiefe Entspannung<br><br><br></p>
             <p>&bull; Fuhlendorf Behandlung</p>
 
-             <a href="../seiten/Fuhlendorf.html">
+             <a href="seiten/Fuhlendorf.html">
                 Mehr über die Fuhlendorf-Behandlung!
             </a><br>
             
