--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 verbessern <br> und Ihre Lebensqualität nachhaltig zu steigern.<br>
                 Mit fundiertem Fachwissen und modernen Therapieansätzen setzen wir alles daran,
                 <br> Sie auf Ihrem Weg zu mehr Wohlbefinden und Vitalität zu begleiten.
-                Erfahren Sie mehr über meine Leistungen und vereinbaren sie gerne einen Termin.<br> <br>
+                Erfahren Sie mehr über unsere Leistungen und vereinbaren sie gerne einen Termin.<br> <br>
                          Wir freuen uns darauf, Sie kennenzulernen!
             </h4>
 
