--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <body>
    <header>
        <nav>
+            <div class="menu-icon" id="menu-toggle">
+            ☰
+        </div>
            <ul>
 
                <li><a href="index.html">Home</a></li>
@@ -52,9 +55,11 @@
 
     <footer class=" footer-unterteil-footer">
             <div class="video-container">
-                <iframe src="https://player.vimeo.com/video/1055338833?h=f5c5ff9cc0&amp;title=0&amp;byline=0&amp;
-                 portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
-                         allow="autoplay; fullscreen; picture-in-picture;width:clipboard-write; encrypted-media"
+                <iframe
+                
+                    src="https://player.vimeo.com/video/1055338833?h=f5c5ff9cc0&amp;title=0&amp;byline=0&amp;
+                     portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                    allow="autoplay; fullscreen; picture-in-picture;width:clipboard-write; encrypted-media"
                         title="Praxis">
                 </iframe>
             </div>
