--- a/seiten/Kontakt.html
+++ b/seiten/Kontakt.html
@@ -32,6 +32,7 @@
         </h1>
     </section>
     <footer></footer>
+        <script defer src="../scripts/menu.js"></script>
 
     </body>
  </html>
