--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
             <div class="menu-icon" id="menu-toggle">
             ☰
         </div>
-           <ul>
-
+           <ul> class="nav-links" id="nav-links">
                <li><a href="index.html">Home</a></li>
                <li><a href="seiten/Ort.html">Ort</a></li>
                <li><a href="seiten/Kontakt.html">Kontakt</a></li>
