--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <meta name="keywords" content="Physiotherapie, Therapiezentrum, Sabine A. Burmann">
         <meta name="author" content="Sabine A. Burmann">
         <link rel="stylesheet" href="styles/styles.css">
+        <script defer src="scripts/menu.js"></script> <!-- Externes JavaScript-File -->
+        
     </head>
 
     <body>
