--- a/seiten/Kontakt.html
+++ b/seiten/Kontakt.html
@@ -4,12 +4,16 @@
         <meta charset="UTF-8">
         <title>Therapie-Zentrum Sabine A. Burmann</title>
         <link rel="stylesheet" href="../styles/styles.css">
+        <script defer src="../scripts/menu.js"></script>
     </head>
 
     <body>
    <header>
        <nav>
-           <ul>
+            <div class="menu-icon" id="menu-toggle">
+               ☰
+            </div>
+           <ul class="nav-links" id="nav-links">
                <li><a href="../index.html">Home</a></li>
                <li><a href="Ort.html">Ort</a></li>
                <li><a href="Kontakt.html">Kontakt</a></li>
