--- a/seiten/Leistungen.html
+++ b/seiten/Leistungen.html
@@ -2,14 +2,14 @@
 <html lang="de">
     <head>
         <meta charset="UTF-8">
-        <title>Therapie-Zentrum Sabine A. Burmann</title>title>
+        <title>Therapie-Zentrum Sabine A. Burmann</title>
         <link rel="stylesheet" href="../styles/styles.css">
     </head>
 
     <body>
    <header>
        <nav>
-           <ul>
+           <ul class="navlinks">
                <li><a href="../index.html">Home</a></li>
                <li><a href="Ort.html">Ort</a></li>
                <li><a href="Kontakt.html">Kontakt</a></li>
@@ -61,12 +61,11 @@
 
              Neben der Vojta-Therapie für: <br><br>
 
-            • Kinder<br><br>
-
-            • Jugendliche<br><br>
-
-            • Erwachsene<br><br>
-
+            <div class="Thailand">
+               <div> Kinder</div>
+               <div>Jugendliche</div>
+               <div>Erwachsene</div>
+            </div>
 
 
             <br>bieten wir weitere Anwendungen an: <br><br>
