--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Therapie-Zentrum Sabine A. Burmann</title>
-        <meta name="keywords" content="Physiotherapie, Therapiezentrum, Sabine A. Burmann">
+        <meta name="keywords" content="Physiotherapie, Therapiezentrum, Oldenburg, Sabine A. Burmann">
         <meta name="author" content="Sabine A. Burmann">
         <link rel="stylesheet" href="styles/styles.css">
         <script defer src="scripts/menu.js"></script> <!-- Externes JavaScript-File -->
